test_output_utf8.txt

> MyTrackr@0.0.1 test:e2e
> jest --config ./test/jest-e2e.json test/reproduce_issue.e2e-spec.ts

node.exe : FAIL test/
reproduce_issue.e2e-s
pec.ts
At C:\Program Files\n
odejs\npm.ps1:29 
char:3
+   & $NODE_EXE 
$NPM_CLI_JS $args
+   ~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (FAIL te   
 st/reproduce_iss    
ue.e2e-spec.ts:S    
tring) [], Remot    
eException
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
  ΓùÅ Test suite 
failed to run

    Jest encountered 
an unexpected token

    Jest failed to 
parse a file. This 
happens e.g. when 
your code or its 
dependencies use 
non-standard 
JavaScript syntax, 
or when Jest is not 
configured to 
support such syntax.

    Out of the box 
Jest supports Babel, 
which will be used 
to transform your 
files into valid JS 
based on your Babel 
configuration.

    By default 
"node_modules" 
folder is ignored by 
transformers.

    Here's what you 
can do:
     ΓÇó If you are 
trying to use 
ECMAScript Modules, 
see https://jestjs.io
/docs/ecmascript-modu
les for how to 
enable it.
     ΓÇó If you are 
trying to use 
TypeScript, see https
://jestjs.io/docs/get
ting-started#using-ty
pescript
     ΓÇó To have 
some of your 
"node_modules" files 
transformed, you can 
specify a custom "tra
nsformIgnorePatterns"
 in your config.
     ΓÇó If you need 
a custom 
transformation, 
specify a 
"transform" option 
in your config.
     ΓÇó If you 
simply want to mock 
your non-JS modules 
(e.g. binary assets) 
you can stub them 
out with the 
"moduleNameMapper" 
config option.

    You'll find more 
details and examples 
of these config 
options in the docs:
    https://jestjs.io
/docs/configuration
    For information 
about custom 
transformations, see:
    https://jestjs.io
/docs/code-transforma
tion

    Details:

    C:\Users\Enigma\D
ownloads\MyTrackr\nod
e_modules\@scure\base
\index.js:326
    export const 
utils = {
    ^^^^^^

    SyntaxError: 
Unexpected token 
'export'

    [0m [90m 2 
|[39m 
[36mimport[39m { [
33mInjectRepository[
39m } [36mfrom[39m 
[32m'@nestjs/typeorm
'[39m[33m;[39m
     [90m 3 |[39m 
[36mimport[39m { 
[33mRepository[39m 
} [36mfrom[39m [32
m'typeorm'[39m[33m;
[39m
    [31m[1m>[22m[
39m[90m 4 |[39m 
[36mimport[39m {
     [90m   |[39m 
[31m[1m^[22m[39m
     [90m 5 |[39m  
 generateSecret 
[36mas[39m otpGener
ateSecret[33m,[39m
     [90m 6 |[39m  
 generateURI 
[36mas[39m otpGener
ateURI[33m,[39m
     [90m 7 |[39m  
 verify [36mas[39m 
otpVerify[33m,[39m
[0m

      at Runtime.crea
teScriptFromCode (../
node_modules/jest-run
time/build/index.js:1
318:40)
      at 
Object.<anonymous> (.
./node_modules/@otpli
b/plugin-base32-scure
/src/index.ts:1:1)
      at 
Object.<anonymous> (.
./node_modules/otplib
/src/functional.ts:13
:8)
      at 
Object.<anonymous> (.
./src/auth/services/m
fa.service.ts:4:1)
      at 
Object.<anonymous> (.
./src/auth/services/a
uth.service.ts:9:1)
      at 
Object.<anonymous> (.
./src/auth/services/i
ndex.ts:1:1)
      at 
Object.<anonymous> (.
./src/auth/auth.modul
e.ts:16:1)
      at 
Object.<anonymous> (.
./src/app.module.ts:6
:1)
      at 
Object.<anonymous> (r
eproduce_issue.e2e-sp
ec.ts:4:1)

Test Suites: 1 
failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        6.249 s
Ran all test suites 
matching test/reprodu
ce_issue.e2e-spec.ts.
